2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/ly-rules.make ($(outdir)/%.pdf): backport -u +lilypond.map
	fix

	* stepmake/stepmake/metafont-rules.make: backport 1.7 fixes.

	* scripts/etf2ly.py: backport 1.7.24 fixes.

	* Documentation/topdocs/INSTALL.texi (Top): idem.

	* Documentation/topdocs/README.texi (Top): change to ftp.lilypond.org

2003-07-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/main.cc (notice): change FSF address

	* po/de.po: new version.

2003-07-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/duration.cc (var): backport SCM_ASSERT_TYPE sideeffect fix. 

	* lily/parser.yy (Repeated_music): backport tremolo fix.

	* lily/chord-tremolo-engraver.cc: idem.

2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/index.tely (Top): typo

2003-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Add unsupported check for g++ >= 3.3.

	* stepmake/aclocal.m4 (STEPMAKE_CHECK_VERSION_UNSUPPORTED): New
	function (backport.)

2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (extra_init): add compat2 to latexoptions. 

2003-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (fonts): Also make fontball.

2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/*:
	* lily/main.cc: It's 2003 already; messages only.

	* Documentation/user/GNUmakefile: backport: Compatibility fix for
	new makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90
	(rsn) for making binary packages; info splitting bug has been
	fixed.

2003-05-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.6.10
	
	* lily/multi-measure-rest-engraver.cc
	(start_translation_timestep): backport of 1.7 grace + mmrest fix. 

2003-04-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py.in: temporary directory vulnerability fix.

2003-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (SUBDIRS): midi2ly.1 build fix backport: build
	python before scripts (thanks Anthony).
