@@ -1,5 +1,5 @@
 # -*-Makefile-*-
-# title	   specific top level makefile for LilyPond  
+-# title	   specific top level makefile for LilyPond  
 
 # subdir level:
 #
@@ -37,8 +37,6 @@ footify:
 
 fonts:
 	$(MAKE) -C $(depth)/mf
-	(cd $(builddir)/share/lilypond/fonts && \
-		tar czvf ../../../$(outbase)/type1.tar.gz type1/*.pfa type1/fonts.* type1/lilypond.* )
 
 run-reqs: builddir-setup fonts lily
 web-reqs: run-reqs pfa-fonts
@@ -55,6 +53,8 @@ web-doc: web-reqs
 
 pfa-fonts:
 	$(MAKE) MAKE_PFA_FILES=1 -C mf
+	(cd $(builddir)/share/lilypond/fonts && \
+		tar czvf ../../../$(outbase)/type1.tar.gz type1/*.pfa type1/fonts.* type1/lilypond.* )
 
 docdir = $(prefix)/share/doc/lilypond-$(TOPLEVEL_VERSION)
 install-html-doc: html-doc
