@@ -1,3 +1,7 @@
+2003-07-19  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile.in: Fix for fonts/web target.
+
 2003-07-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* make/ly-rules.make ($(outdir)/%.pdf): backport -u +lilypond.map
